[metadata]
name = pyuptimekuma
version = attr: pyuptimekuma.__version__
author = Jayakorn Karikan
author_email = jayakornk@gmail.com
url = https://github.com/jayakornk/pyuptimekuma
description = Simple Python wrapper for Uptime Kuma
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyuptimekuma, setuptools
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.8.0
install_requires =
    aiohttp>=3.8.1,<4.0
    prometheus-client>=0.14.1
    cchardet>=2.1.7
    aiodns>=3.0.0

[options.extras_require]
dev =
    black==22.3.0
    isort==5.10.1

[options.package_data]
* = README.md

[isort]
profile = black